# UXAProject

./: .gitignore  CMakeLists.txt  README.md
ProjA/: CMakeLists.txt
ProjA/cmake/: CPackConfig.cmake
ProjA/include/: CMakeLists.txt
ProjA/include/ProjA/: CMakeLists.txt  World.h
ProjA/src/: CMakeLists.txt  main.cpp
ProjA/test/: CMakeLists.txt  testProjA.cpp
ProjB/: CMakeLists.txt
ProjB/cmake/: CPackConfig.cmake
ProjB/include/: CMakeLists.txt
ProjB/include/ProjB/: World.h
ProjB/src/: CMakeLists.txt  World.cpp  main.cpp
ProjB/test/: CMakeLists.txt
ProjC/: CMakeLists.txt
ProjC/cmake/: CPackConfig.cmake
ProjC/include/: CMakeLists.txt
ProjC/include/ProjC/: CMakeLists.txt  Student.h  Version.h.in  World.h
ProjC/src/: CMakeLists.txt  Student.cpp  World.cpp  main.cpp
ProjC/test/: CMakeLists.txt  testProjC.cpp
cmake/: Common.cmake
qt4-gui/: CMakeLists.txt
qt4-gui/cmake/: CPackConfig.cmake  qt4-guiConfig.cmake
qt4-gui/doc/: CMakeLists.txt
qt4-gui/include/: CMakeLists.txt
qt4-gui/include/qt4-gui/: CMakeLists.txt  Configs.h.in
qt4-gui/src/: CMakeLists.txt  LoadImage.cpp  LoadImage.ui
qt4-gui/test/DemoLoadImage/: CMakeLists.txt  main.cpp
uxabiped/: CMakeLists.txt
uxabiped/cmake/: CPackConfig.cmake  uxabipedConfig.cmake
uxabiped/data/UXA/: UXA-LeftLeg.xml  UXA-RightLeg.xml  UXA-StartLeftLeg.xml  UXA-Torso.xml  UXA.xml
uxabiped/data/UXA/model/: torso.iv  upperBody.iv  waist.iv
uxabiped/data/UXA/model/Legs/: leftLegAnkle1.iv  leftLegAnkle1.wrl  leftLegAnkle2.iv  leftLegThigh.iv  leftLeg_pelvis.iv  leftLowerLeg.iv  leftUpperLeg.iv  leftUpperLeg.wrl  rightLegAnkle1.iv  rightLegAnkle2.iv  rightLegThigh.iv  rightLowerLeg.iv
uxabiped/data/UXA/model/Legs/Untitled Folder/: rightLeg_pelvis.iv  rightLeg_pelvis.wrl  rightUpperLeg.iv  rightUpperLeg.wrl
uxabiped/include/: CMakeLists.txt
uxabiped/include/uxabiped/: BipedalConfig.cmake.in  CMakeLists.txt  Version.h.in  World.h
uxabiped/include/uxabiped/ik/: DifferentialReferenceIK.h
uxabiped/include/uxabiped/pattern/: FootStepTA.h  FootstepPlaner.h  PolynomialFootStepTA.h  PolynomialFootstepPlaner.h
uxabiped/include/uxabiped/stabilizer/: KajitaStabilizer.h
uxabiped/include/uxabiped/stabilizer/kajita/: ZMPDistributor.h
uxabiped/include/uxabiped/utils/: Walking.h
uxabiped/src/: CMakeLists.txt
uxabiped/src/ik/: HierarchicalWalkingIK.cpp
uxabiped/src/pattern/: BalancingPlaner.cpp  FootstepPlaner.cpp  PolynomialFootstepPlaner.cpp
uxabiped/src/pattern/zmp/: ZMPPreviewControl.cpp  ZMPReferencePlaner.cpp
uxabiped/src/recovery/: CapturePointRecovery.cpp  ZMPFallDetector.cpp
uxabiped/src/stabilizer/: CartesianStabilizer.cpp  KajitaStabilizer.cpp  StabilizerFactory.cpp
uxabiped/src/stabilizer/kajita/: FootForceController.h  FootTorqueController.h  ZMPDistributor.cpp
uxabiped/src/utils/: Kinematics.cpp  Walking.cpp  ZMP.cpp
uxabiped/src/utils/mmm/: TrajectoryExporter.cpp  TrajectoryLogger.cpp  TrajectoryPlayer.cpp
uxabiped/uxaapps/: CMakeLists.txt
uxabiped/uxaapps/ControlPanel/: CMakeLists.txt  Window.h
uxabiped/uxaapps/ReferenceIKTest/: CMakeLists.txt  ReferenceIKTest.cpp  Window.cpp  Window.h
uxabiped/uxaapps/ReferenceIKTest/.csettings/: 0.1010032287_cdtBuildSystem  0.1010032287_org.eclipse.cdt.core.settings  0.558335650_cdtBuildSystem  0.558335650_org.eclipse.cdt.core.settings  org.eclipse.linuxtools.cdt.autotools.core.toolChain.894669834_cdtBuildSystem  org.eclipse.linuxtools.cdt.autotools.core.toolChain.894669834_org.eclipse.cdt.core.settings
uxapanel/: CMakeLists.txt
uxapanel/cmake/: CPackConfig.cmake  uxabiped-config.cmake  uxapanelConfig.cmake
uxapanel/include/: CMakeLists.txt
uxapanel/include/uxapanel/: BipedalConfig.cmake.in  CMakeLists.txt
uxapanel/src/: CMakeLists.txt  Window.cpp  Window.h  Window.ui  main.cpp
uxapanel/test/: CMakeLists.txt  main.cpp
